Use models from external packages

--- a/package.json
+++ b/package.json
@@ -305,6 +305,8 @@
     "async": "^1.5.2",
     "bootstrap": "https://github.com/twbs/bootstrap/archive/v3.3.5.tar.gz",
     "clean-stack": "^2.0.0",
+    "compass-preferences-model": "^0.0.2",
+    "compass-user-model": "^0.0.2",
     "d3": "3.5.17",
     "d3-flextree": "1.0.3",
     "d3-timer": "1.0.7",
@@ -343,15 +345,15 @@
     "mongodb-ace-mode": "^0.0.2",
     "mongodb-ace-theme": "^0.0.1",
     "mongodb-ace-theme-query": "^0.0.2",
-    "mongodb-collection-model": "^1.0.1",
-    "mongodb-connection-model": "^12.5.5",
+    "mongodb-collection-model": "^2.0.3",
+    "mongodb-connection-model": "^13.0.1",
     "mongodb-core": "^3.1.8",
     "mongodb-data-service": "^12.4.16",
     "mongodb-database-model": "^0.1.3",
     "mongodb-explain-plan-model": "^0.2.2",
     "mongodb-extended-json": "^1.10.1",
     "mongodb-index-model": "^2.3.0",
-    "mongodb-instance-model": "^7.0.0",
+    "mongodb-instance-model": "^9.0.1",
     "mongodb-js-metrics": "^4.2.0",
     "mongodb-language-model": "^1.2.0",
     "mongodb-ns": "^2.0.0",
