--- a/package.json
+++ b/package.json
@@ -270,16 +270,16 @@
     "@mongodb-js/compass-auto-updates": "^0.2.0",
     "@mongodb-js/compass-collection": "^0.0.5",
     "@mongodb-js/compass-collection-stats": "^3.2.0",
-    "@mongodb-js/compass-collections-ddl": "^0.0.21",
+    "@mongodb-js/compass-collections-ddl": "^0.0.22",
     "@mongodb-js/compass-connect": "^3.8.12",
     "@mongodb-js/compass-crud": "^6.2.3",
     "@mongodb-js/compass-database": "^0.0.10",
-    "@mongodb-js/compass-databases-ddl": "^0.0.16",
+    "@mongodb-js/compass-databases-ddl": "^0.0.17",
     "@mongodb-js/compass-deployment-awareness": "^6.4.1",
     "@mongodb-js/compass-export-to-language": "^2.6.0",
     "@mongodb-js/compass-find-in-page": "^1.2.0",
     "@mongodb-js/compass-import-export": "^1.3.0",
-    "@mongodb-js/compass-indexes": "^0.0.6",
+    "@mongodb-js/compass-indexes": "0.0.9-beta.0",
     "@mongodb-js/compass-instance": "^1.2.0",
     "@mongodb-js/compass-instance-header": "^0.0.3",
     "@mongodb-js/compass-license": "^1.2.0",
@@ -290,7 +290,7 @@
     "@mongodb-js/compass-schema-validation": "^1.0.7",
     "@mongodb-js/compass-server-version": "^2.2.0",
     "@mongodb-js/compass-serverstats": "^12.3.2",
-    "@mongodb-js/compass-sidebar": "^0.0.4",
+    "@mongodb-js/compass-sidebar": "^0.0.5",
     "@mongodb-js/compass-ssh-tunnel-status": "^2.2.0",
     "@mongodb-js/compass-status": "^3.2.0",
     "ampersand-collection": "^1.5.0",
