--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
             "node_modules/@mongodb-js/compass-crud",
             "node_modules/@mongodb-js/compass-database",
             "node_modules/@mongodb-js/compass-databases-ddl",
+            "node_modules/@mongodb-js/compass-field-store",
             "node_modules/@mongodb-js/compass-find-in-page",
             "node_modules/@mongodb-js/compass-connect",
             "node_modules/@mongodb-js/compass-auth-kerberos",
@@ -92,6 +93,7 @@
             "node_modules/@mongodb-js/compass-crud",
             "node_modules/@mongodb-js/compass-database",
             "node_modules/@mongodb-js/compass-databases-ddl",
+            "node_modules/@mongodb-js/compass-field-store",
             "node_modules/@mongodb-js/compass-find-in-page",
             "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-deployment-awareness",
@@ -129,6 +131,7 @@
             "node_modules/@mongodb-js/compass-crud",
             "node_modules/@mongodb-js/compass-database",
             "node_modules/@mongodb-js/compass-databases-ddl",
+            "node_modules/@mongodb-js/compass-field-store",
             "node_modules/@mongodb-js/compass-find-in-page",
             "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-connect",
@@ -170,6 +173,7 @@
             "node_modules/@mongodb-js/compass-crud",
             "node_modules/@mongodb-js/compass-database",
             "node_modules/@mongodb-js/compass-databases-ddl",
+            "node_modules/@mongodb-js/compass-field-store",
             "node_modules/@mongodb-js/compass-find-in-page",
             "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-connect",
@@ -263,7 +267,7 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-aggregations": "^2.2.12",
+    "@mongodb-js/compass-aggregations": "^2.2.14",
     "@mongodb-js/compass-auth-kerberos": "^1.3.1",
     "@mongodb-js/compass-auth-ldap": "^1.2.0",
     "@mongodb-js/compass-auth-x509": "^1.2.0",
@@ -277,17 +281,18 @@
     "@mongodb-js/compass-databases-ddl": "^0.0.17",
     "@mongodb-js/compass-deployment-awareness": "^6.4.1",
     "@mongodb-js/compass-export-to-language": "^2.6.0",
+    "@mongodb-js/compass-field-store": "^4.0.3",
     "@mongodb-js/compass-find-in-page": "^1.2.0",
     "@mongodb-js/compass-import-export": "^1.3.0",
-    "@mongodb-js/compass-indexes": "0.0.9-beta.0",
+    "@mongodb-js/compass-indexes": "0.0.10",
     "@mongodb-js/compass-instance": "^1.2.0",
     "@mongodb-js/compass-instance-header": "^0.0.3",
     "@mongodb-js/compass-license": "^1.2.0",
     "@mongodb-js/compass-metrics": "^0.0.12",
     "@mongodb-js/compass-plugin-info": "^1.2.0",
-    "@mongodb-js/compass-query-bar": "^2.0.6",
+    "@mongodb-js/compass-query-bar": "^2.0.8",
     "@mongodb-js/compass-query-history": "^3.2.3",
-    "@mongodb-js/compass-schema-validation": "^1.0.7",
+    "@mongodb-js/compass-schema-validation": "^1.0.9",
     "@mongodb-js/compass-server-version": "^2.2.0",
     "@mongodb-js/compass-serverstats": "^12.3.2",
     "@mongodb-js/compass-sidebar": "^0.0.5",
