--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
             "node_modules/@mongodb-js/compass-databases-ddl",
             "node_modules/@mongodb-js/compass-field-store",
             "node_modules/@mongodb-js/compass-find-in-page",
+            "node_modules/@mongodb-js/compass-home",
             "node_modules/@mongodb-js/compass-connect",
             "node_modules/@mongodb-js/compass-auth-kerberos",
             "node_modules/@mongodb-js/compass-auth-ldap",
@@ -135,6 +136,7 @@
             "node_modules/@mongodb-js/compass-database",
             "node_modules/@mongodb-js/compass-databases-ddl",
             "node_modules/@mongodb-js/compass-field-store",
+            "node_modules/@mongodb-js/compass-home",
             "node_modules/@mongodb-js/compass-find-in-page",
             "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-connect",
@@ -178,6 +180,7 @@
             "node_modules/@mongodb-js/compass-database",
             "node_modules/@mongodb-js/compass-databases-ddl",
             "node_modules/@mongodb-js/compass-field-store",
+            "node_modules/@mongodb-js/compass-home",
             "node_modules/@mongodb-js/compass-find-in-page",
             "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-connect",
@@ -287,6 +290,7 @@
     "@mongodb-js/compass-deployment-awareness": "^6.4.3",
     "@mongodb-js/compass-export-to-language": "^2.6.0",
     "@mongodb-js/compass-field-store": "^4.0.3",
+    "@mongodb-js/compass-home": "^0.0.1",
     "@mongodb-js/compass-find-in-page": "^1.2.0",
     "@mongodb-js/compass-import-export": "^1.3.0",
     "@mongodb-js/compass-indexes": "^0.0.12",
