--- a/package.json
+++ b/package.json
@@ -290,7 +290,7 @@
     "@mongodb-js/compass-schema-validation": "1.0.7",
     "@mongodb-js/compass-server-version": "2.2.0",
     "@mongodb-js/compass-serverstats": "12.3.2",
-    "@mongodb-js/compass-sidebar": "0.0.5",
+    "@mongodb-js/compass-sidebar": "0.0.5-beta-1",
     "@mongodb-js/compass-ssh-tunnel-status": "2.2.0",
     "@mongodb-js/compass-status": "3.2.0",
     "ampersand-collection": "^1.5.0",
