--- a/package.json
+++ b/package.json
@@ -275,7 +275,7 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-aggregations": "^3.0.4",
+    "@mongodb-js/compass-aggregations": "^3.0.6",
     "@mongodb-js/compass-app-stores": "1.0.9",
     "@mongodb-js/compass-auth-kerberos": "^1.3.1",
     "@mongodb-js/compass-auth-ldap": "^1.2.0",
@@ -293,16 +293,16 @@
     "@mongodb-js/compass-field-store": "^4.0.3",
     "@mongodb-js/compass-find-in-page": "^1.2.0",
     "@mongodb-js/compass-home": "^0.0.6",
-    "@mongodb-js/compass-import-export": "^1.3.0",
+    "@mongodb-js/compass-import-export": "^2.0.0",
     "@mongodb-js/compass-indexes": "^0.0.12",
     "@mongodb-js/compass-instance": "^1.2.0",
     "@mongodb-js/compass-instance-header": "^0.0.3",
     "@mongodb-js/compass-license": "^1.2.0",
     "@mongodb-js/compass-metrics": "^0.0.15",
     "@mongodb-js/compass-plugin-info": "^1.2.0",
-    "@mongodb-js/compass-query-bar": "^2.0.9",
+    "@mongodb-js/compass-query-bar": "^2.1.0",
     "@mongodb-js/compass-query-history": "^3.2.3",
-    "@mongodb-js/compass-schema-validation": "^1.0.9",
+    "@mongodb-js/compass-schema-validation": "^1.1.1",
     "@mongodb-js/compass-server-version": "^2.2.1",
     "@mongodb-js/compass-serverstats": "^12.3.2",
     "@mongodb-js/compass-sidebar": "^0.0.9",
@@ -319,6 +319,7 @@
     "app-migrations": "mongodb-js/app-migrations#v0.1.2",
     "async": "^1.5.2",
     "bootstrap": "https://github.com/twbs/bootstrap/archive/v3.3.5.tar.gz",
+    "bson-transpilers": "^0.10.0",
     "clean-stack": "^2.0.0",
     "compass-preferences-model": "^0.0.2",
     "compass-user-model": "^0.0.2",
@@ -357,7 +358,7 @@
     "moment": "^2.10.6",
     "mongodb": "^3.2.2",
     "mongodb-ace-autocompleter": "^0.1.0",
-    "mongodb-ace-mode": "^0.2.1",
+    "mongodb-ace-mode": "^0.3.0",
     "mongodb-ace-theme": "^0.0.1",
     "mongodb-ace-theme-query": "^0.0.2",
     "mongodb-collection-model": "^2.0.3",
