Delete schema internal plugin

--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
             "node_modules/@mongodb-js/compass-auth-kerberos",
             "node_modules/@mongodb-js/compass-auth-ldap",
             "node_modules/@mongodb-js/compass-auth-x509",
-            "node_modules/@mongodb-js/compass-schema-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-instance",
@@ -66,6 +65,8 @@
             "node_modules/@mongodb-js/compass-plugin-info",
             "node_modules/@mongodb-js/compass-query-bar",
             "node_modules/@mongodb-js/compass-query-history",
+            "node_modules/@mongodb-js/compass-schema",
+            "node_modules/@mongodb-js/compass-schema-validation",
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-server-version",
             "node_modules/@mongodb-js/compass-sidebar",
@@ -146,6 +147,7 @@
             "node_modules/@mongodb-js/compass-auth-kerberos",
             "node_modules/@mongodb-js/compass-auth-ldap",
             "node_modules/@mongodb-js/compass-auth-x509",
+            "node_modules/@mongodb-js/compass-schema",
             "node_modules/@mongodb-js/compass-schema-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-metrics",
@@ -191,6 +193,7 @@
             "node_modules/@mongodb-js/compass-auth-kerberos",
             "node_modules/@mongodb-js/compass-auth-ldap",
             "node_modules/@mongodb-js/compass-auth-x509",
+            "node_modules/@mongodb-js/compass-schema",
             "node_modules/@mongodb-js/compass-schema-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-query-bar",
@@ -279,40 +282,41 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-aggregations": "^3.4.13",
+    "@mongodb-js/compass-aggregations": "^4.0.0-rc.6",
     "@mongodb-js/compass-app-stores": "2.0.2",
     "@mongodb-js/compass-auth-kerberos": "^2.0.1",
     "@mongodb-js/compass-auth-ldap": "^2.0.1",
     "@mongodb-js/compass-auth-x509": "^2.0.0",
     "@mongodb-js/compass-auto-updates": "^1.0.0",
-    "@mongodb-js/compass-collection": "^0.0.6",
-    "@mongodb-js/compass-collection-stats": "^3.2.0",
-    "@mongodb-js/compass-collections-ddl": "^1.0.6",
+    "@mongodb-js/compass-collection": "^1.0.7",
+    "@mongodb-js/compass-collection-stats": "^4.2.4",
+    "@mongodb-js/compass-collections-ddl": "^1.0.8",
     "@mongodb-js/compass-connect": "^3.8.16",
-    "@mongodb-js/compass-crud": "^6.3.4",
+    "@mongodb-js/compass-crud": "^7.0.2",
     "@mongodb-js/compass-database": "^0.1.0",
-    "@mongodb-js/compass-databases-ddl": "^1.0.4",
-    "@mongodb-js/compass-deployment-awareness": "^7.0.1",
-    "@mongodb-js/compass-explain-plan": "^2.0.0",
-    "@mongodb-js/compass-export-to-language": "^3.1.0",
+    "@mongodb-js/compass-databases-ddl": "^1.1.1",
+    "@mongodb-js/compass-deployment-awareness": "^8.0.0",
+    "@mongodb-js/compass-explain-plan": "^3.0.0",
+    "@mongodb-js/compass-export-to-language": "^4.1.0",
     "@mongodb-js/compass-field-store": "^4.0.4",
     "@mongodb-js/compass-find-in-page": "^1.3.1",
-    "@mongodb-js/compass-home": "^0.1.1",
-    "@mongodb-js/compass-import-export": "^2.1.0",
-    "@mongodb-js/compass-indexes": "^1.0.0",
+    "@mongodb-js/compass-home": "^1.0.0",
+    "@mongodb-js/compass-import-export": "^3.0.0",
+    "@mongodb-js/compass-indexes": "^2.0.0",
     "@mongodb-js/compass-instance": "^1.3.2",
     "@mongodb-js/compass-instance-header": "^0.1.4",
     "@mongodb-js/compass-license": "^1.3.0",
     "@mongodb-js/compass-metrics": "^0.1.2",
     "@mongodb-js/compass-plugin-info": "^1.3.0",
-    "@mongodb-js/compass-query-bar": "^3.0.1",
-    "@mongodb-js/compass-query-history": "^4.0.0",
-    "@mongodb-js/compass-schema-validation": "^1.2.1",
+    "@mongodb-js/compass-query-bar": "^4.0.2",
+    "@mongodb-js/compass-query-history": "^5.0.1",
+    "@mongodb-js/compass-schema": "^0.0.5",
+    "@mongodb-js/compass-schema-validation": "^2.0.0",
     "@mongodb-js/compass-server-version": "^2.3.2",
     "@mongodb-js/compass-serverstats": "^12.5.1",
-    "@mongodb-js/compass-sidebar": "^1.1.5",
+    "@mongodb-js/compass-sidebar": "^1.3.0",
     "@mongodb-js/compass-ssh-tunnel-status": "^2.3.0",
-    "@mongodb-js/compass-status": "^3.3.0",
+    "@mongodb-js/compass-status": "^3.5.1",
     "ampersand-collection": "^1.5.0",
     "ampersand-collection-filterable": "^0.2.1",
     "ampersand-dom-bindings": "^3.7.0",
