--- a/package.json
+++ b/package.json
@@ -278,39 +278,39 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-aggregations": "^4.0.8",
+    "@mongodb-js/compass-aggregations": "^4.0.14",
     "@mongodb-js/compass-app-stores": "^3.0.0",
     "@mongodb-js/compass-auth-kerberos": "^2.0.1",
     "@mongodb-js/compass-auth-ldap": "^2.0.1",
     "@mongodb-js/compass-auth-x509": "^2.0.0",
     "@mongodb-js/compass-auto-updates": "^1.0.0",
-    "@mongodb-js/compass-collection": "^1.1.4",
-    "@mongodb-js/compass-collection-stats": "^4.2.4",
+    "@mongodb-js/compass-collection": "^1.1.6",
+    "@mongodb-js/compass-collection-stats": "^4.2.5",
     "@mongodb-js/compass-collections-ddl": "^2.0.9",
     "@mongodb-js/compass-connect": "^3.8.16",
-    "@mongodb-js/compass-crud": "^7.0.3",
+    "@mongodb-js/compass-crud": "7.0.2",
     "@mongodb-js/compass-database": "^0.1.0",
     "@mongodb-js/compass-databases-ddl": "^2.0.0",
-    "@mongodb-js/compass-deployment-awareness": "^9.0.1",
+    "@mongodb-js/compass-deployment-awareness": "^9.0.2",
     "@mongodb-js/compass-explain-plan": "^3.0.0",
     "@mongodb-js/compass-export-to-language": "^4.1.0",
     "@mongodb-js/compass-field-store": "^5.0.0",
     "@mongodb-js/compass-find-in-page": "^1.3.1",
     "@mongodb-js/compass-home": "^1.0.7",
-    "@mongodb-js/compass-import-export": "^3.0.0",
+    "@mongodb-js/compass-import-export": "^3.0.1",
     "@mongodb-js/compass-indexes": "^2.0.2",
     "@mongodb-js/compass-instance": "^1.3.2",
     "@mongodb-js/compass-license": "^1.3.0",
-    "@mongodb-js/compass-metrics": "^0.1.2",
+    "@mongodb-js/compass-metrics": "^0.2.3",
     "@mongodb-js/compass-plugin-info": "^1.3.0",
-    "@mongodb-js/compass-query-bar": "^4.0.6",
+    "@mongodb-js/compass-query-bar": "^4.0.7",
     "@mongodb-js/compass-query-history": "^5.0.2",
-    "@mongodb-js/compass-schema": "^1.0.1",
+    "@mongodb-js/compass-schema": "^1.0.3",
     "@mongodb-js/compass-schema-validation": "^2.0.0",
-    "@mongodb-js/compass-server-version": "^3.0.2",
+    "@mongodb-js/compass-server-version": "^3.0.3",
     "@mongodb-js/compass-serverstats": "^12.5.3",
-    "@mongodb-js/compass-sidebar": "^2.1.2",
-    "@mongodb-js/compass-ssh-tunnel-status": "^3.0.1",
+    "@mongodb-js/compass-sidebar": "^2.1.9",
+    "@mongodb-js/compass-ssh-tunnel-status": "^3.0.2",
     "@mongodb-js/compass-status": "^3.5.1",
     "ampersand-collection": "^1.5.0",
     "ampersand-collection-filterable": "^0.2.1",
