--- a/package.json
+++ b/package.json
@@ -288,10 +288,10 @@
     "@mongodb-js/compass-collection-stats": "^4.2.5",
     "@mongodb-js/compass-collections-ddl": "^2.0.9",
     "@mongodb-js/compass-connect": "^3.8.17",
-    "@mongodb-js/compass-crud": "7.0.2",
+    "@mongodb-js/compass-crud": "^7.1.1",
     "@mongodb-js/compass-database": "^0.1.0",
     "@mongodb-js/compass-databases-ddl": "^2.0.1",
-    "@mongodb-js/compass-deployment-awareness": "^9.0.4",
+    "@mongodb-js/compass-deployment-awareness": "^9.0.5",
     "@mongodb-js/compass-explain-plan": "^3.0.0",
     "@mongodb-js/compass-export-to-language": "^4.1.0",
     "@mongodb-js/compass-field-store": "^5.0.0",
