--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "MongoDB Compass",
   "description": "The MongoDB GUI",
   "homepage": "https://compass.mongodb.com",
-  "version": "1.20.0-dev",
+  "version": "1.20.0-dev.0",
   "installerVersion": "1.20.0.0",
   "apiVersion": "2.0.0",
   "main": "src/main.js",
@@ -248,7 +248,12 @@
     ],
     "ignore": [
       "electron",
-      "marked"
+      "marked",
+      "lodash.assign",
+      "lodash.defaults",
+      "lodash.clone",
+      "lodash.includes",
+      "mongodb-url"
     ]
   },
   "scripts": {
@@ -280,14 +285,14 @@
   "dependencies": {
     "@mongodb-js/compass-aggregations": "^4.1.1",
     "@mongodb-js/compass-app-stores": "^3.0.0",
-    "@mongodb-js/compass-auth-kerberos": "^2.0.1",
-    "@mongodb-js/compass-auth-ldap": "^2.0.1",
-    "@mongodb-js/compass-auth-x509": "^2.0.0",
+    "@mongodb-js/compass-auth-kerberos": "^3.0.0",
+    "@mongodb-js/compass-auth-ldap": "^3.0.1",
+    "@mongodb-js/compass-auth-x509": "^3.0.0",
     "@mongodb-js/compass-auto-updates": "^1.0.0",
     "@mongodb-js/compass-collection": "^1.1.6",
     "@mongodb-js/compass-collection-stats": "^4.2.5",
     "@mongodb-js/compass-collections-ddl": "^2.0.9",
-    "@mongodb-js/compass-connect": "^3.8.17",
+    "@mongodb-js/compass-connect": "^4.1.1",
     "@mongodb-js/compass-crud": "^7.1.2",
     "@mongodb-js/compass-database": "^0.1.0",
     "@mongodb-js/compass-databases-ddl": "^2.0.1",
@@ -296,7 +301,7 @@
     "@mongodb-js/compass-export-to-language": "^4.1.0",
     "@mongodb-js/compass-field-store": "^5.0.0",
     "@mongodb-js/compass-find-in-page": "^1.3.1",
-    "@mongodb-js/compass-home": "^1.0.7",
+    "@mongodb-js/compass-home": "^2.0.0",
     "@mongodb-js/compass-import-export": "^3.0.1",
     "@mongodb-js/compass-indexes": "^2.0.2",
     "@mongodb-js/compass-instance": "^1.3.2",
@@ -310,7 +315,7 @@
     "@mongodb-js/compass-server-version": "^3.0.3",
     "@mongodb-js/compass-serverstats": "^12.5.3",
     "@mongodb-js/compass-sidebar": "^2.1.11",
-    "@mongodb-js/compass-ssh-tunnel-status": "^3.0.2",
+    "@mongodb-js/compass-ssh-tunnel-status": "^4.0.0",
     "@mongodb-js/compass-status": "^3.5.1",
     "ampersand-collection": "^1.5.0",
     "ampersand-collection-filterable": "^0.2.1",
@@ -366,9 +371,9 @@
     "mongodb-ace-theme": "^0.0.1",
     "mongodb-ace-theme-query": "^0.0.2",
     "mongodb-collection-model": "^2.0.4",
-    "mongodb-connection-model": "^13.1.6",
-    "mongodb-core": "^3.2.2",
-    "mongodb-data-service": "^14.0.7",
+    "mongodb-connection-model": "^14.1.1",
+    "mongodb-core": "^3.2.7",
+    "mongodb-data-service": "^15.0.3",
     "mongodb-database-model": "^0.1.3",
     "mongodb-explain-plan-model": "^0.2.2",
     "mongodb-extended-json": "^1.10.1",
@@ -403,7 +408,7 @@
     "reflux": "0.4.1",
     "reflux-state-mixin": "mongodb-js/reflux-state-mixin",
     "semver": "^5.1.0",
-    "storage-mixin": "^2.0.0",
+    "storage-mixin": "^3.1.1",
     "triejs": "github:rueckstiess/triejs",
     "turf-destination": "^1.2.1",
     "turf-distance": "^1.1.0",
