--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-instance",
+            "node_modules/@mongodb-js/compass-loading",
             "node_modules/@mongodb-js/compass-metrics",
             "node_modules/@mongodb-js/compass-plugin-info",
             "node_modules/@mongodb-js/compass-query-bar",
@@ -103,6 +104,7 @@
             "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-license",
+            "node_modules/@mongodb-js/compass-loading",
             "node_modules/@mongodb-js/compass-metrics",
             "node_modules/@mongodb-js/compass-query-bar",
             "node_modules/@mongodb-js/compass-query-history",
@@ -151,6 +153,7 @@
             "node_modules/@mongodb-js/compass-metrics",
             "node_modules/@mongodb-js/compass-query-bar",
             "node_modules/@mongodb-js/compass-query-history",
+            "node_modules/@mongodb-js/compass-loading",
             "node_modules/@mongodb-js/compass-plugin-info",
             "node_modules/@mongodb-js/compass-instance",
             "node_modules/@mongodb-js/compass-serverstats",
@@ -195,6 +198,7 @@
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-query-bar",
             "node_modules/@mongodb-js/compass-query-history",
+            "node_modules/@mongodb-js/compass-loading",
             "node_modules/@mongodb-js/compass-plugin-info",
             "node_modules/@mongodb-js/compass-instance",
             "node_modules/@mongodb-js/compass-serverstats",
@@ -306,6 +310,7 @@
     "@mongodb-js/compass-indexes": "^2.0.2",
     "@mongodb-js/compass-instance": "^1.3.2",
     "@mongodb-js/compass-license": "^1.3.0",
+    "@mongodb-js/compass-loading": "^1.0.4",
     "@mongodb-js/compass-metrics": "^0.3.0",
     "@mongodb-js/compass-plugin-info": "^1.3.1",
     "@mongodb-js/compass-query-bar": "^4.1.2",
