--- a/packages/storage-mixin/package.json
+++ b/packages/storage-mixin/package.json
@@ -40,10 +40,12 @@
     "ampersand-sync": "^4.0.3",
     "async": "^1.5.0",
     "debug": "^4.1.0",
+    "hadron-ipc": "^1.1.0",
     "keytar": "^4.4.1",
     "localforage": "^1.3.0",
     "lodash": "^4.13.1",
     "rimraf": "^2.4.4",
+    "uuid": "^3.3.3",
     "write-file-atomic": "^1.1.4"
   },
   "devDependencies": {
