--- a/package.json
+++ b/package.json
@@ -283,7 +283,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/10gen/compass.git"
+    "url": "git://github.com/mongodb-js/compass.git"
   },
   "dependencies": {
     "@mongodb-js/compass-aggregations": "^5.0.0",
@@ -314,7 +314,7 @@
     "@mongodb-js/compass-plugin-info": "^2.0.0",
     "@mongodb-js/compass-query-bar": "^5.0.0",
     "@mongodb-js/compass-query-history": "^6.0.0",
-    "@mongodb-js/compass-schema": "^2.0.0",
+    "@mongodb-js/compass-schema": "^2.0.1",
     "@mongodb-js/compass-schema-validation": "^3.0.0",
     "@mongodb-js/compass-server-version": "^4.0.0",
     "@mongodb-js/compass-serverstats": "^13.0.0",
