--- a/package.json
+++ b/package.json
@@ -283,7 +283,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mongodb-js/compass.git"
+    "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
     "@mongodb-js/compass-aggregations": "^5.0.1",
