--- a/package.json
+++ b/package.json
@@ -283,7 +283,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/10gen/compass.git"
+    "url": "git://github.com/mongodb-js/compass.git"
   },
   "dependencies": {
     "@mongodb-js/compass-aggregations": "^5.0.1",
@@ -312,8 +312,8 @@
     "@mongodb-js/compass-loading": "^1.0.5",
     "@mongodb-js/compass-metrics": "^2.0.0",
     "@mongodb-js/compass-plugin-info": "^2.0.0",
-    "@mongodb-js/compass-query-bar": "^5.0.0",
-    "@mongodb-js/compass-query-history": "^6.0.0",
+    "@mongodb-js/compass-query-bar": "^5.0.1",
+    "@mongodb-js/compass-query-history": "^6.0.3",
     "@mongodb-js/compass-schema": "^2.0.1",
     "@mongodb-js/compass-schema-validation": "^3.0.0",
     "@mongodb-js/compass-server-version": "^4.0.0",
