--- a/package.json
+++ b/package.json
@@ -312,7 +312,7 @@
     "@mongodb-js/compass-plugin-info": "^2.0.0",
     "@mongodb-js/compass-query-bar": "^5.0.1",
     "@mongodb-js/compass-query-history": "^6.0.3",
-    "@mongodb-js/compass-schema": "^2.0.1",
+    "@mongodb-js/compass-schema": "^2.0.2",
     "@mongodb-js/compass-schema-validation": "^3.0.0",
     "@mongodb-js/compass-server-version": "^4.0.0",
     "@mongodb-js/compass-serverstats": "^13.0.0",
@@ -388,6 +388,7 @@
     "mongodb-shell-to-url": "^0.1.0",
     "ms": "^0.7.1",
     "node-pre-gyp": "^0.6.38",
+    "npm": "^6.7.0",
     "numeral": "^1.5.3",
     "pluralize": "^1.2.1",
     "prop-types": "^15.5.8",
