--- a/package.json
+++ b/package.json
@@ -339,6 +339,7 @@
     "debug": "mongodb-js/debug#v2.2.3",
     "debug-menu": "^0.3.0",
     "detect-coordinates": "^0.2.0",
+    "electron-localshortcut": "^3.1.0",
     "electron-squirrel-startup": "^1.0.0",
     "ensure-error": "^1.0.0",
     "font-awesome": "^4.7.0",
