--- a/package.json
+++ b/package.json
@@ -372,7 +372,7 @@
     "mongodb-ace-theme-query": "^0.0.2",
     "mongodb-collection-model": "^2.0.4",
     "mongodb-connection-model": "^14.3.2",
-    "mongodb-data-service": "github:mongodb-js/data-service#update-driver",
+    "mongodb-data-service": "^15.4.0",
     "mongodb-database-model": "^0.1.3",
     "mongodb-explain-plan-model": "^0.2.2",
     "mongodb-extended-json": "^1.10.2",
