--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -26,7 +26,7 @@ post:
         - ~/.mongodb/runner/*.log
 
 functions:
-  'prepare':
+  "prepare":
     - command: git.get_project
       params:
         directory: src
@@ -136,7 +136,6 @@ functions:
           tar -zcf compass-build.tgz ./src
     - <<: *save-artifact
       params:
-        permissions: private
         local_file: compass-build.tgz
         remote_file: ${project}/${revision}/${build_variant}/build.tgz
 
@@ -157,6 +156,7 @@ functions:
         script: |
           set -e
           tar xzf compass-build.tgz --strip-components=1
+          # TODO: lucas: may want to remove ./node_modules here before running npm ci like travis does?
           ls -alh
     - <<: *generate-compass-env
 
@@ -213,7 +213,7 @@ functions:
     #   params:
     #     file: src/plugin/plugin-test-results.xml
 
-  'package':
+  "package":
     - command: shell.exec
       params:
         working_dir: src
@@ -260,6 +260,8 @@ functions:
             net start MSIServer
           fi
 
+          export NPM_CONFIG_LOGLEVEL=error
+          export DEBUG=hadron*
           npm run release ${compass_distribution};
           EOF_BUILD_SH
 
@@ -282,7 +284,7 @@ functions:
             ls -la dist
           fi
 
-  'publish':
+  "publish":
     command: shell.exec
     params:
       working_dir: src
@@ -302,7 +304,7 @@ functions:
         echo "Uploading release assets to S3 and GitHub if needed..."
         npm run upload ${compass_distribution}
 
-  'save windows artifacts':
+  "save windows artifacts":
     # setup
     - <<: *save-artifact
       params:
@@ -330,33 +332,33 @@ functions:
         local_file: src/dist/${windows_nupkg_full_filename}
         remote_file: ${project}/${revision}/${windows_nupkg_full_filename}
 
-  'save osx artifacts':
+  "save osx artifacts":
     # .dmg
     - <<: *save-artifact
       params:
         local_file: src/dist/${osx_dmg_filename}
         remote_file: ${project}/${revision}/${osx_dmg_filename}
-        content_type: 'application/x-apple-diskimage'
+        content_type: "application/x-apple-diskimage"
     # .zip
     - <<: *save-artifact
       params:
         local_file: src/dist/${osx_zip_filename}
         remote_file: ${project}/${revision}/${osx_zip_filename}
         content_type: application/zip
-  'save linux artifacts':
+  "save linux artifacts":
     # .deb
     - <<: *save-artifact
       params:
         local_file: src/dist/${linux_deb_filename}
         remote_file: ${project}/${revision}/${linux_deb_filename}
-        content_type: 'application/vnd.debian.binary-package'
+        content_type: "application/vnd.debian.binary-package"
     # .tar.gz
     - <<: *save-artifact
       params:
         local_file: src/dist/${linux_tar_filename}
         remote_file: ${project}/${revision}/${linux_tar_filename}
         content_type: application/x-gzip
-  'save rhel artifacts':
+  "save rhel artifacts":
     # .rpm
     - <<: *save-artifact
       params:
@@ -384,28 +386,28 @@ tasks:
       - func: publish
         vars:
           compass_distribution: compass
-      - func: 'save osx artifacts'
+      - func: "save osx artifacts"
       - func: package
         vars:
           compass_distribution: compass-community
       - func: publish
         vars:
           compass_distribution: compass-community
-      - func: 'save osx artifacts'
+      - func: "save osx artifacts"
       - func: package
         vars:
           compass_distribution: compass-isolated
       - func: publish
         vars:
           compass_distribution: compass-isolated
-      - func: 'save osx artifacts'
+      - func: "save osx artifacts"
       - func: package
         vars:
           compass_distribution: compass-readonly
       - func: publish
         vars:
           compass_distribution: compass-readonly
-      - func: 'save osx artifacts'
+      - func: "save osx artifacts"
 
   - name: compile
     depends_on: []
@@ -417,14 +419,14 @@ tasks:
   - name: verify
     depends_on: [compile]
     tags:
-      - 'verify'
+      - "verify"
     commands:
       - func: restore
       - func: verify
   - name: test-unit
     depends_on: [compile]
     tags:
-    - test
+      - test
     commands:
       - func: restore
       - func: test
@@ -434,7 +436,7 @@ tasks:
   - name: test-functional
     depends_on: [compile]
     tags:
-      - 'test'
+      - "test"
     commands:
       - func: restore
       - func: test
@@ -475,7 +477,7 @@ tasks:
       - func: publish
         vars:
           compass_distribution: compass
-      - func: 'save windows artifacts'
+      - func: "save windows artifacts"
         variants: [windows]
       # NOTE (@imlucas) Because macos can't utilize task parallelism
       # and instead runs `oneshot-compile-test-package-publish`
@@ -483,9 +485,9 @@ tasks:
       # 1 macos box setup to run functional tests.
       # - func: 'save osx artifacts'
       #   variants: [macos]
-      - func: 'save linux artifacts'
+      - func: "save linux artifacts"
         variants: [ubuntu]
-      - func: 'save rhel artifacts'
+      - func: "save rhel artifacts"
         variants: [rhel]
 
   - name: package-and-publish-compass-community
@@ -498,11 +500,11 @@ tasks:
       - func: publish
         vars:
           compass_distribution: compass-community
-      - func: 'save windows artifacts'
+      - func: "save windows artifacts"
         variants: [windows]
-      - func: 'save linux artifacts'
+      - func: "save linux artifacts"
         variants: [ubuntu]
-      - func: 'save rhel artifacts'
+      - func: "save rhel artifacts"
         variants: [rhel]
 
   - name: package-and-publish-compass-isolated
@@ -515,11 +517,11 @@ tasks:
       - func: publish
         vars:
           compass_distribution: compass-isolated
-      - func: 'save windows artifacts'
+      - func: "save windows artifacts"
         variants: [windows]
-      - func: 'save linux artifacts'
+      - func: "save linux artifacts"
         variants: [ubuntu]
-      - func: 'save rhel artifacts'
+      - func: "save rhel artifacts"
         variants: [rhel]
 
   - name: package-and-publish-compass-readonly
@@ -532,11 +534,11 @@ tasks:
       - func: publish
         vars:
           compass_distribution: compass-readonly
-      - func: 'save windows artifacts'
+      - func: "save windows artifacts"
         variants: [windows]
-      - func: 'save linux artifacts'
+      - func: "save linux artifacts"
         variants: [ubuntu]
-      - func: 'save rhel artifacts'
+      - func: "save rhel artifacts"
         variants: [rhel]
 
   # NOTE (@imlucas) Examples of how to extend which tests run
@@ -551,7 +553,6 @@ tasks:
   #     - func: test
   #       vars:
   #         test_suite: renderer
-
   # - name: test-main
   #   depends_on: [compile]
   #   tags:
@@ -561,7 +562,6 @@ tasks:
   #     - func: test
   #       vars:
   #         test_suite: main
-
   # - name: test-enzyme
   #   depends_on: [compile]
   #   tags:
@@ -571,7 +571,6 @@ tasks:
   #     - func: test
   #       vars:
   #         test_suite: enzyme
-
   # - name: test-unit
   #   depends_on: [compile]
   #   tags:
@@ -582,7 +581,6 @@ tasks:
   #       vars:
   #         test_suite: unit
   #         mongodb_version: stable
-
   # - name: test-functional-unstable-server
   #   depends_on: [compile]
   #   tags:
@@ -593,7 +591,6 @@ tasks:
   #       vars:
   #         test_suite: functional
   #         mongodb_version: stable
-
   # - name: test-functional-unstable-server
   #   depends_on: [compile]
   #   tags:
@@ -604,7 +601,6 @@ tasks:
   #       vars:
   #         test_suite: functional
   #         mongodb_version: unstable
-
   # - name: test-functional-36x-server
   #   depends_on: [compile]
   #   tags:
@@ -615,7 +611,6 @@ tasks:
   #       vars:
   #         test_suite: functional
   #         mongodb_version: 3.6.x
-
   # - name: test-functional-34x-server
   #   depends_on: [compile]
   #   tags:
@@ -626,7 +621,6 @@ tasks:
   #       vars:
   #         test_suite: functional
   #         mongodb_version: 3.4.x
-
   # - name: test-functional-26x-server
   #   depends_on: [compile]
   #   tags:
