COMPASS-4018: Update hadron-build and compile-cache. Will backport to master after

--- a/package.json
+++ b/package.json
@@ -346,7 +346,7 @@
     "hadron-app": "^3.1.0",
     "hadron-app-registry": "^7.1.0",
     "hadron-auto-update-manager": "^2.0.0",
-    "hadron-compile-cache": "^1.0.1",
+    "hadron-compile-cache": "^2.0.0",
     "hadron-document": "^5.0.4",
     "hadron-ipc": "^1.1.0",
     "hadron-module-cache": "^0.0.3",
@@ -429,7 +429,7 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "eslint-config-mongodb-js": "^2.2.0",
-    "hadron-build": "22.0.3",
+    "hadron-build": "^24.0.0",
     "hadron-spectron": "^5.0.0",
     "jsdom": "^9.8.3",
     "mocha": "^4.1.0",
