build(deps): source app-migrations from npm instead of github

--- a/package.json
+++ b/package.json
@@ -327,7 +327,7 @@
     "ampersand-router": "^3.0.2",
     "ampersand-state": "4.8.2",
     "ampersand-view": "^9.0.0",
-    "app-migrations": "mongodb-js/app-migrations#v0.1.2",
+    "app-migrations": "^1.0.0",
     "async": "^1.5.2",
     "bootstrap": "https://github.com/twbs/bootstrap/archive/v3.3.5.tar.gz",
     "bson-transpilers": "^0.13.3",
