build(deps): latest hadron*
hadron-app@latest hadron-app-registry@latest hadron-compile-cache@latest hadron-document@latest hadron-module-cache@latest

--- a/package.json
+++ b/package.json
@@ -342,13 +342,13 @@
     "electron-squirrel-startup": "^1.0.0",
     "ensure-error": "^1.0.0",
     "font-awesome": "^4.7.0",
-    "hadron-app": "^3.1.0",
-    "hadron-app-registry": "^7.1.0",
+    "hadron-app": "^3.2.0",
+    "hadron-app-registry": "^7.2.0",
     "hadron-auto-update-manager": "^2.0.0",
-    "hadron-compile-cache": "^1.0.1",
-    "hadron-document": "^5.0.4",
+    "hadron-compile-cache": "^2.0.0",
+    "hadron-document": "^6.0.0",
     "hadron-ipc": "^1.1.0",
-    "hadron-module-cache": "^0.0.3",
+    "hadron-module-cache": "0.0.4",
     "hadron-plugin-manager": "^5.3.1",
     "hadron-react-bson": "^3.4.0",
     "hadron-react-buttons": "^3.4.0",
