COMPASS-3933: Update to Electron 6.0.11 (#1873)
* COMPASS-3933: Update to Electron 6.0.11

* chore(ci): Update node version on travis and evergreen

* chore: Remove unused jsfmt config

Switched to prettier ages ago

* hadron-build@23.0.2: ensure gnome-keyring is set as a requirement for debian OSs

* COMPASS-3917: keytar 5 upgrade

* build(deps): COMPASS-3933: Update to latest connect and query history plugins

### compass-query-history@7

- COMPASS-3933 COMPASS-4072: Electron 6 and lodash updates mongodb-js/compass-query-history#41
- build(deps-dev): COMPASS-4098: bump electron from 6.1.7 to 7.1.9 mongodb-js/compass-query-history#47

### compass-connect@5.3.2

- COMPASS-4104 urlencode credentials when using X509
- mongodb-js/compass-connect#82  chore: update dependencies for driver 3.4 and electron 6 COMPASS-4017

* build(deps): COMPASS-3933 update compass-explain-plan

- [x] mongodb-js/compass-explain-plan#17
- [x] mongodb-js/compass-explain-plan#33

* COMPASS-3933: Latest metrics and others

* update dev deps

* remove dupe deps from compass-schema

* more extraneous deps

* :arrow_up: export to lang, crud, schema validation

* latest language model

* COMPASS-3933: latest agg plugin mongodb-js/compass-aggregations#120

* build(deps): source app-migrations from npm instead of github

* build(deps): latest hadron*

hadron-app@latest hadron-app-registry@latest hadron-compile-cache@latest hadron-document@latest hadron-module-cache@latest

* build(deps): Update all mongodb* to latest

- mongodb-ace-autocompleter@0.4.1
- mongodb-extended-json@1.11.0
- mongodb-connection-model@14.4.3
- mongodb-js-metrics@5.0.0
- mongodb-language-model@1.6.1
- mongodb-explain-plan-model@0.2.3
- mongodb-ace-mode@0.4.1
- mongodb@3.5.2
- mongodb-data-service@16.4.0
- mongodb-query-parser@2.0.0
- mongodb-schema@8.2.5
- mongodb-query-util@0.2.1
- mongodb-collection-model@3.1.0
- mongodb-ns@2.2.0

* COMPASS-3933: latest crud


--- a/package.json
+++ b/package.json
@@ -285,7 +285,7 @@
     "url": "git://github.com/mongodb-js/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-aggregations": "^6.0.4",
+    "@mongodb-js/compass-aggregations": "^6.1.0",
     "@mongodb-js/compass-app-stores": "^4.0.0",
     "@mongodb-js/compass-auth-kerberos": "^4.0.0",
     "@mongodb-js/compass-auth-ldap": "^4.0.0",
@@ -294,13 +294,13 @@
     "@mongodb-js/compass-collection": "^2.0.5",
     "@mongodb-js/compass-collection-stats": "^5.0.0",
     "@mongodb-js/compass-collections-ddl": "^3.0.0",
-    "@mongodb-js/compass-connect": "^5.3.1",
-    "@mongodb-js/compass-crud": "^8.2.0",
+    "@mongodb-js/compass-connect": "^5.3.2",
+    "@mongodb-js/compass-crud": "^9.0.0",
     "@mongodb-js/compass-database": "^1.0.0",
     "@mongodb-js/compass-databases-ddl": "^3.0.0",
     "@mongodb-js/compass-deployment-awareness": "^10.0.0",
-    "@mongodb-js/compass-explain-plan": "^4.0.2",
-    "@mongodb-js/compass-export-to-language": "^6.0.3",
+    "@mongodb-js/compass-explain-plan": "^4.1.0",
+    "@mongodb-js/compass-export-to-language": "^6.0.5",
     "@mongodb-js/compass-field-store": "^6.0.0",
     "@mongodb-js/compass-find-in-page": "^2.0.0",
     "@mongodb-js/compass-home": "^3.0.1",
@@ -308,12 +308,12 @@
     "@mongodb-js/compass-indexes": "^3.0.3",
     "@mongodb-js/compass-instance": "^2.0.0",
     "@mongodb-js/compass-loading": "^1.0.7",
-    "@mongodb-js/compass-metrics": "^2.1.0",
+    "@mongodb-js/compass-metrics": "^3.0.1",
     "@mongodb-js/compass-plugin-info": "^2.0.0",
     "@mongodb-js/compass-query-bar": "^6.0.2",
-    "@mongodb-js/compass-query-history": "^6.0.3",
+    "@mongodb-js/compass-query-history": "^7.0.0",
     "@mongodb-js/compass-schema": "^2.0.7",
-    "@mongodb-js/compass-schema-validation": "^3.1.0",
+    "@mongodb-js/compass-schema-validation": "^4.0.0",
     "@mongodb-js/compass-server-version": "^4.0.0",
     "@mongodb-js/compass-serverstats": "^13.0.0",
     "@mongodb-js/compass-sidebar": "^3.2.3",
@@ -327,7 +327,7 @@
     "ampersand-router": "^3.0.2",
     "ampersand-state": "4.8.2",
     "ampersand-view": "^9.0.0",
-    "app-migrations": "mongodb-js/app-migrations#v0.1.2",
+    "app-migrations": "^1.0.0",
     "async": "^1.5.2",
     "bootstrap": "https://github.com/twbs/bootstrap/archive/v3.3.5.tar.gz",
     "bson-transpilers": "^0.13.3",
@@ -338,18 +338,17 @@
     "d3-timer": "1.0.7",
     "debug": "mongodb-js/debug#v2.2.3",
     "debug-menu": "^0.3.0",
-    "detect-coordinates": "^0.2.0",
     "electron-localshortcut": "^3.1.0",
     "electron-squirrel-startup": "^1.0.0",
     "ensure-error": "^1.0.0",
     "font-awesome": "^4.7.0",
-    "hadron-app": "^3.1.0",
-    "hadron-app-registry": "^7.1.0",
+    "hadron-app": "^3.2.0",
+    "hadron-app-registry": "^7.2.0",
     "hadron-auto-update-manager": "^2.0.0",
-    "hadron-compile-cache": "^1.0.1",
-    "hadron-document": "^5.0.4",
+    "hadron-compile-cache": "^2.0.0",
+    "hadron-document": "^6.0.0",
     "hadron-ipc": "^1.1.0",
-    "hadron-module-cache": "^0.0.3",
+    "hadron-module-cache": "0.0.4",
     "hadron-plugin-manager": "^5.3.1",
     "hadron-react-bson": "^3.4.0",
     "hadron-react-buttons": "^3.4.0",
@@ -358,35 +357,34 @@
     "highlight.js": "^8.9.1",
     "jquery": "^2.1.4",
     "kerberos": "^1.1.2",
-    "keytar": "^4.4.1",
+    "keytar": "^5.0.0",
     "less": "^2.6.1",
     "less-cache": "^0.23.0",
     "local-links": "^1.4.0",
     "lodash": "^3.10.1",
     "marky": "^1.2.0",
     "moment": "^2.10.6",
-    "mongodb": "^3.4.0",
-    "mongodb-ace-autocompleter": "^0.3.3",
-    "mongodb-ace-mode": "^0.4.0",
+    "mongodb": "^3.5.2",
+    "mongodb-ace-autocompleter": "^0.4.1",
+    "mongodb-ace-mode": "^0.4.1",
     "mongodb-ace-theme": "^0.0.1",
     "mongodb-ace-theme-query": "^0.0.2",
-    "mongodb-collection-model": "^3.0.0",
+    "mongodb-collection-model": "^3.1.0",
     "mongodb-connection-model": "^14.4.3",
-    "mongodb-data-service": "^16.1.3",
+    "mongodb-data-service": "^16.4.0",
     "mongodb-database-model": "^0.1.3",
-    "mongodb-explain-plan-model": "^0.2.2",
-    "mongodb-extended-json": "^1.10.2",
+    "mongodb-explain-plan-model": "^0.2.3",
+    "mongodb-extended-json": "^1.11.0",
     "mongodb-index-model": "^2.5.0",
     "mongodb-instance-model": "^10.0.0",
-    "mongodb-js-metrics": "^4.2.0",
-    "mongodb-language-model": "^1.2.0",
-    "mongodb-ns": "^2.0.0",
-    "mongodb-query-parser": "^1.4.1",
-    "mongodb-query-util": "^0.1.0",
-    "mongodb-schema": "^8.2.2",
+    "mongodb-js-metrics": "^5.0.0",
+    "mongodb-language-model": "^1.6.1",
+    "mongodb-ns": "^2.2.0",
+    "mongodb-query-parser": "^2.0.0",
+    "mongodb-query-util": "^0.2.1",
+    "mongodb-schema": "^8.2.5",
     "mongodb-shell-to-url": "^0.1.0",
     "ms": "^0.7.1",
-    "node-pre-gyp": "^0.6.38",
     "numeral": "^1.5.3",
     "pluralize": "^1.2.1",
     "prop-types": "^15.5.8",
@@ -408,9 +406,6 @@
     "semver": "^5.1.0",
     "storage-mixin": "^3.2.7",
     "triejs": "github:rueckstiess/triejs",
-    "turf-destination": "^1.2.1",
-    "turf-distance": "^1.1.0",
-    "turf-point": "^2.0.1",
     "uuid": "^3.0.0"
   },
   "devDependencies": {
@@ -423,19 +418,19 @@
     "cheerio": "^1.0.0-rc.2",
     "cross-env": "^5.2.0",
     "devtron": "^1.4.0",
-    "electron": "3.1.13",
+    "electron": "6.0.11",
     "electron-devtools-installer": "^2.2.4",
-    "electron-rebuild": "^1.8.2",
+    "electron-rebuild": "^1.8.8",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
-    "eslint-config-mongodb-js": "^2.2.0",
-    "hadron-build": "^22.0.0",
+    "eslint-config-mongodb-js": "^5.0.3",
+    "hadron-build": "^23.0.2",
     "hadron-spectron": "^5.0.0",
     "jsdom": "^9.8.3",
     "mocha": "^4.1.0",
     "mock-require": "^2.0.1",
-    "mongodb-js-precommit": "^0.3.0",
-    "mongodb-runner": "^4.7.1",
+    "mongodb-js-precommit": "^2.1.0",
+    "mongodb-runner": "^4.8.0",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "xvfb-maybe": "^0.1.3"
@@ -443,12 +438,9 @@
   "optionalDependencies": {
     "vscode-windows-registry": "1.0.1"
   },
-  "precommit": [
-    "check"
-  ],
   "engines": {
-    "node": "^10.2.1",
-    "npm": ">=6.5.0"
+    "node": "^12.4.0",
+    "npm": ">=6.13.0"
   },
   "bugs": {
     "url": "https://docs.mongodb.com/compass/current/#contact",
