--- a/package.json
+++ b/package.json
@@ -336,7 +336,7 @@
     "compass-user-model": "^0.2.0",
     "d3": "3.5.17",
     "d3-timer": "1.0.7",
-    "debug": "mongodb-js/debug#v2.2.3",
+    "debug": "^4.1.1",
     "debug-menu": "^0.3.0",
     "electron-localshortcut": "^3.1.0",
     "electron-squirrel-startup": "^1.0.0",
